# sol-evaluation-system

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  EVALUATION_PROCESSES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_PROGRESS.md  PORTFOLIO_SUMMARY.md  README.md  docker-compose.test.yml  docker-compose.yml  docker-mysql.sh
backend/: API_REFERENCE.md  Dockerfile  Dockerfile.prod  README.md  config.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt  run.py  stopwords.txt  test_imports.py
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  comments.py  dashboard.py  evaluation.py  notifications.py  operation_log.py  swagger.py  user.py  workflow.py
backend/app/models/: __init__.py  comment.py  evaluation.py  mention.py  message.py  operation_log.py  system_config.py  user.py
backend/app/services/: __init__.py  analytics_service.py  backup_service.py  notification_service.py  workflow_service.py
backend/app/utils/: __init__.py  decorators.py  helpers.py  rich_text.py  timezone.py  validators.py
backend/docs/: PRODUCTION_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT.md
backend/migrations/versions/: 1b2a3c4d5e6f_add_title_to_evaluation_processes.py  2e8390bad532_add_technical_specification_fields_to_.py  3138e7668b9f_add_head_officer_id_scs_colleague_id_.py  3e2f7b8a9cde_add_process_fields_to_evaluations.py  4a2b8c9d5e6f_current_head.py  5f8c7d9e3b10_add_process_lot_tables.py  (+18 more)
backend/scripts/: bootstrap_fail_codes.py
backend/tests/: README.md  bug_fixing_process.md  conftest.py  e2e_test_plan.md  helpers.py
(+112 files in other folders)
